# ArcticFox

./: build.gradle  jitpack.yml  settings.gradle
ArcticFox/: build.gradle
ArcticFox/src/main/: AndroidManifest.xml
ArcticFox/src/main/java/com/kirito/basic/: App.java
ArcticFox/src/main/java/com/kirito/basic/activity/: H5Activity.java  SettingActivity.java
ArcticFox/src/main/java/com/kirito/basic/base/: BaseActivity.java  BaseDialogFragment.java  BaseFragment.java
ArcticFox/src/main/java/com/kirito/basic/net/: NetInterface.java
ArcticFox/src/main/java/com/kirito/basic/security/: Protect.java
ArcticFox/src/main/java/com/kirito/basic/view/: BlurView.java  BottomNavigationBehavior.java  CheckBoxSample.java  CircleImageView.java  ClearableEditText.java  ClickableTextView.java  FluorescenceView.java  LockRecyclerView.java  VerticalTextview.java  Watermark.java
ArcticFox/src/main/java/com/kirito/basic/view/headers/: AuraDrawable.java  MathHelper.java  NoiseEffect.java  Particle.java  ParticleSystem.java  PathBitmapMesh.java  Renderable.java  RenderableBear.java  RenderableTree.java  Smoke.java
ArcticFox/src/main/java/com/kirito/basic/view/tween/: FrameRateCounter.java  (+1 more)
ArcticFox/src/main/res/drawable/: bg_button_blue.xml  bg_button_green_unactive.xml  bg_button_unactive.xml  ic_app_icon1.xml  ic_baseline_clear_all_24.xml  ic_baseline_exit_to_app_24.xml  ic_baseline_keyboard_arrow_right_24.xml  ic_baseline_lock_24.xml  ic_baseline_logo_dev_24.xml  ic_baseline_miscellaneous_services_24.xml  ic_baseline_phone_iphone_24.xml  ic_baseline_phonelink_24.xml  ic_baseline_science_24.xml  ic_baseline_supervisor_account_24.xml  ic_baseline_tune_24.xml  ic_close.xml  ic_huodong.xml  ic_invite.xml  ic_keyboard_arrow_right_24.xml  ic_net_not_connect.xml  ic_net_not_connect_1.xml  ic_net_not_connect_2.xml  ic_no_data.xml  ic_no_network.xml  ic_outline_lock_24.xml  ic_qianbao.xml  ic_shezhi.xml  ic_xinxi.xml
ArcticFox/src/main/res/drawable-xxhdpi/: bg_dialog.xml
ArcticFox/src/main/res/drawable-xxhdpi-v9/: bg_button.xml  bg_button_green.xml
ArcticFox/src/main/res/layout/: activity_h5.xml  activity_setting.xml
ArcticFox/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
Protocol/: .gitignore  CMakeLists.txt  build.gradle  gradle.properties
Protocol/src/main/: AndroidManifest.xml
Protocol/src/main/cpp/: HostLib.cpp  HostLib.h  aes.c  aes.h  check_emulator.c  check_emulator.h  checksignature.c  checksignature.h  httplib.h  md5.cpp
Protocol/src/main/java/com/kirshi/protocol/jni/: HostConf.java
gradle/wrapper/: gradle-wrapper.properties
(+24 files in other folders)
